--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
@@ -10,13 +16,20 @@
   <body>
     <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
 
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
+    <main>  
+      <div id="app">
+      <div class="wrapper">
+        <h3>POKEMON</h3>
+        <form class="form-inline search-form">
+          <div class="form-group">
+            <input type="text" class="form-control" name="query" />
+          </div>
 
-    <load src="./partials/footer.html" />
+          <button type="submit" class="btn btn-primary">Search</button>
+        </form>
+
+        <div class="card-container"></div>
+</main>
 
     <script type="module" src="./main.js"></script>
   </body>
