--- a/src/tv-infinity-scroll.html
+++ b/src/tv-infinity-scroll.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 2</title>
+    <title>tv-infinity-scroll</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -13,16 +13,19 @@
       icon-path="./img/sprite.svg#logo"
       highlight-act="active"
     />
-
     <main>
       <div class="container">
         <h1 class="main-title">
-          <span class="main-title-gradient">Welcome</span> to page 2
+          <span class="main-title-gradient">Welcome</span> to tv-infinity-scroll
         </h1>
         <load src="./partials/back-link.html" />
       </div>
-    </main>
+      <div id="app">
+        <ul class="js-movie-list movie-list"></ul>
 
-    <load src="./partials/footer.html" />
+        <div class="js-guard"></div>
+      </div>
+      <script type="module" src="/tv-infinity-scroll.js"></script>
+    </main>
   </body>
 </html>
