--- a/src/tv-load-more.html
+++ b/src/tv-load-more.html
@@ -4,25 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 3</title>
+    <title>TV-load-more</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <load
       src="./partials/header.html"
       icon-path="./img/sprite.svg#logo"
-      highlight-curr="active"
+      highlight-act="active"
     />
 
     <main>
       <div class="container">
         <h1 class="main-title">
-          <span class="main-title-gradient">Welcome</span> to page 3
+          <span class="main-title-gradient">Welcome</span> to TV-load-more
         </h1>
         <load src="./partials/back-link.html" />
       </div>
-    </main>
+      <div id="app">
+        <ul class="js-movie-list movie-list"></ul>
 
-    <load src="./partials/footer.html" />
+        <div class="button-container">
+          <button class="js-load-more load-more-hidden">Load more</button>
+        </div>
+      </div>
+      <script type="module" src="/tv-load-more.js"></script>
+    </main>
   </body>
 </html>
